feat(global): update court features